crypto/liboqs/bindings.rs

// This file is automatically generated by bindgen during the build process.
// It contains the FFI bindings for the liboqs C library.

#![allow(non_upper_case_globals)]
#![allow(non_camel_case_types)]
#![allow(non_snake_case)]
#![allow(dead_code)]

// Common types and constants
pub const LIBOQS_SUCCESS: i32 = 0;
pub const LIBOQS_ERROR: i32 = -1;
pub const LIBOQS_ERROR_INVALID_PARAMETER: i32 = -2;
pub const LIBOQS_ERROR_MEMORY: i32 = -3;
pub const LIBOQS_ERROR_CRYPTO: i32 = -4;
pub const LIBOQS_ERROR_VERIFICATION: i32 = -5;

// Kyber parameter sets
pub const KYBER_512: i32 = 0;
pub const KYBER_768: i32 = 1;
pub const KYBER_1024: i32 = 2;

// Dilithium parameter sets
pub const DILITHIUM_2: i32 = 0;
pub const DILITHIUM_3: i32 = 1;
pub const DILITHIUM_5: i32 = 2;

// Buffer structure for safe memory management
#[repr(C)]
pub struct liboqs_buffer_t {
    pub data: *mut u8,
    pub length: usize,
    pub is_allocated: i32,
}

// Kyber structures
#[repr(C)]
pub struct kyber_public_key_t {
    pub key_data: liboqs_buffer_t,
    pub params: i32,
}

#[repr(C)]
pub struct kyber_secret_key_t {
    pub key_data: liboqs_buffer_t,
    pub params: i32,
}

#[repr(C)]
pub struct kyber_ciphertext_t {
    pub ciphertext: liboqs_buffer_t,
    pub params: i32,
}

#[repr(C)]
pub struct kyber_shared_secret_t {
    pub shared_secret: liboqs_buffer_t,
    pub params: i32,
}

// Dilithium structures
#[repr(C)]
pub struct dilithium_public_key_t {
    pub key_data: liboqs_buffer_t,
    pub params: i32,
}

#[repr(C)]
pub struct dilithium_secret_key_t {
    pub key_data: liboqs_buffer_t,
    pub params: i32,
}

#[repr(C)]
pub struct dilithium_signature_t {
    pub signature: liboqs_buffer_t,
    pub params: i32,
}

// Type aliases for parameter sets
pub type kyber_parameter_set_t = i32;
pub type dilithium_parameter_set_t = i32;
pub type liboqs_result_t = i32;

// External function declarations
extern "C" {
    // Common utility functions
    pub fn liboqs_zeroize(ptr: *mut u8, len: usize);
    pub fn liboqs_random_bytes(buffer: *mut u8, length: usize) -> i32;
    pub fn liboqs_constant_time_compare(a: *const u8, b: *const u8, length: usize) -> i32;
    pub fn liboqs_get_error_string(result: i32) -> *const i8;
    pub fn liboqs_get_last_error(buffer: *mut i8, buffer_len: usize) -> i32;

    // Kyber KEM functions
    pub fn kyber_get_algorithm_name(params: i32) -> *const i8;
    pub fn kyber_get_public_key_length(params: i32) -> usize;
    pub fn kyber_get_secret_key_length(params: i32) -> usize;
    pub fn kyber_get_ciphertext_length(params: i32) -> usize;
    pub fn kyber_get_shared_secret_length(params: i32) -> usize;
    pub fn kyber_get_security_level(params: i32) -> i32;
    
    pub fn kyber_keypair_generate(
        params: i32,
        public_key: *mut kyber_public_key_t,
        secret_key: *mut kyber_secret_key_t,
    ) -> i32;
    
    pub fn kyber_encapsulate(
        public_key: *const kyber_public_key_t,
        ciphertext: *mut kyber_ciphertext_t,
        shared_secret: *mut kyber_shared_secret_t,
    ) -> i32;
    
    pub fn kyber_decapsulate(
        secret_key: *const kyber_secret_key_t,
        ciphertext: *const kyber_ciphertext_t,
        shared_secret: *mut kyber_shared_secret_t,
    ) -> i32;
    
    pub fn kyber_public_key_free(key: *mut kyber_public_key_t);
    pub fn kyber_secret_key_free(key: *mut kyber_secret_key_t);
    pub fn kyber_ciphertext_free(ciphertext: *mut kyber_ciphertext_t);
    pub fn kyber_shared_secret_free(shared_secret: *mut kyber_shared_secret_t);
    
    pub fn kyber_get_test_vectors(
        params: i32,
        public_key: *mut u8,
        secret_key: *mut u8,
        ciphertext: *mut u8,
        shared_secret: *mut u8,
    ) -> i32;

    // Dilithium functions
    pub fn dilithium_get_algorithm_name(params: i32) -> *const i8;
    pub fn dilithium_get_public_key_length(params: i32) -> usize;
    pub fn dilithium_get_secret_key_length(params: i32) -> usize;
    pub fn dilithium_get_signature_length(params: i32) -> usize;
    pub fn dilithium_get_security_level(params: i32) -> i32;
    
    pub fn dilithium_keypair_generate(
        params: i32,
        public_key: *mut dilithium_public_key_t,
        secret_key: *mut dilithium_secret_key_t,
    ) -> i32;
    
    pub fn dilithium_sign(
        secret_key: *const dilithium_secret_key_t,
        message: *const u8,
        message_len: usize,
        signature: *mut dilithium_signature_t,
    ) -> i32;
    
    pub fn dilithium_verify(
        public_key: *const dilithium_public_key_t,
        message: *const u8,
        message_len: usize,
        signature: *const dilithium_signature_t,
    ) -> i32;
    
    pub fn dilithium_public_key_free(key: *mut dilithium_public_key_t);
    pub fn dilithium_secret_key_free(key: *mut dilithium_secret_key_t);
    pub fn dilithium_signature_free(signature: *mut dilithium_signature_t);
    
    pub fn dilithium_get_test_vectors(
        params: i32,
        public_key: *mut u8,
        secret_key: *mut u8,
        message: *const u8,
        message_len: usize,
        signature: *mut u8,
    ) -> i32;
}

#[cfg(test)]
mod tests {
    use super::*;

    #[test]
    fn test_constants() {
        assert_eq!(LIBOQS_SUCCESS, 0);
        assert_eq!(LIBOQS_ERROR, -1);
        assert_eq!(LIBOQS_ERROR_INVALID_PARAMETER, -2);
        assert_eq!(LIBOQS_ERROR_MEMORY, -3);
        assert_eq!(LIBOQS_ERROR_CRYPTO, -4);
        assert_eq!(LIBOQS_ERROR_VERIFICATION, -5);
    }

    #[test]
    fn test_kyber_constants() {
        assert_eq!(KYBER_512, 0);
        assert_eq!(KYBER_768, 1);
        assert_eq!(KYBER_1024, 2);
    }

    #[test]
    fn test_dilithium_constants() {
        assert_eq!(DILITHIUM_2, 0);
        assert_eq!(DILITHIUM_3, 1);
        assert_eq!(DILITHIUM_5, 2);
    }

    #[test]
    fn test_struct_sizes() {
        assert_eq!(std::mem::size_of::<liboqs_buffer_t>(), 24);
        assert_eq!(std::mem::size_of::<kyber_public_key_t>(), 32);
        assert_eq!(std::mem::size_of::<kyber_secret_key_t>(), 32);
        assert_eq!(std::mem::size_of::<dilithium_public_key_t>(), 32);
        assert_eq!(std::mem::size_of::<dilithium_secret_key_t>(), 32);
    }
}
